part1/Project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crudapp-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudapp
  template:
    metadata:
      labels:
        app:
          crudapp
    spec:
      containers:
        - name: crudapp
          image: younes0204/crud-app
