part1/Project/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: crudapp-svc
spec:
  type: NodePort
  selector:
    app:  crudapp
  ports:
    - name: crudapp-service
      nodePort: 30080
      port: 4444
      targetPort: 3000
